srcon (1.0.5)
  * Everything is rewritten and now uses polling
  * Removed signal handlers
  * Changed message output
  * Split to two modes - query and interactive (-i)
  * Fixed piping
  * Added color option for interactive mode prompt (-t)
  * Removed confirm request about exit/quit commands

srcon (1.0.4)
  * Added command line parameters

srcon (1.0.3)
  * Changed the prompt.
  * Improved the recieving algorithm.
  * Fixed the hanging on connection closure.

srcon (1.0.2)
  * Added password prompt.
  * Added confirmation to send 'exit' and 'quit' commands.
  * Fixed rcon prompt.
  * Fixed packet receiving.

srcon (1.0.1)
  * Added line editing and history.

srcon (1.0)